# Subtitle-Translator

./: .gitignore  BILINGUAL_SUBTITLE_GUIDE.md  CLAUDE.md  LICENSE  README.md  README_zh.md  check_cache.py  daemon_server.sh  daemon_status.sh  env.example  pyproject.toml  quick_start.sh  restart_daemon.sh  start_backend.sh  stop_daemon.sh  test_translation_cache.py  todo.md  多语言翻译修复说明.md
.claude/agents/: subtitle-translator-reinstaller.md
.github/workflows/: ci.yml
backend/: README.md  server.py
chrome-extension/: FEATURES_TODO.md  README.md  background.js  content-test.js  content-with-logger.js  content.js  logic-explanation.js  manifest.json  popup.html  popup.js  srt-parser.js  style.css  subtitle-fetcher.js  translation-processor.js
chrome-extension/dev/: FEATURES_TODO.md  README.md  test.html
cli/: env.example
cli/src/subtitle_translator/: cli.py  config_manager.py  env_setup.py  logger.py  processor.py  service.py
development/chrome-extension/: content.js
development/docs/: CHROME_EXTENSION_DEBUG.md  PROMPT_OPTIMIZATION_PROJECT.md  SUBTITLE_UI_IMPROVEMENTS.md
docs/: AUDIO_CACHE_GUIDE.md  BACKEND_STARTUP_GUIDE.md  BILINGUAL_SUBTITLE_GUIDE.md  CHROME_EXTENSION_DEBUG.md  QUICK_TEST.md  SETUP_GUIDE.md  best-practices.md  development-workflow.md  environment-setup.md  transcription-setup.md
docs/chrome-extension-dev/: content-debug.js  logger.js
extension/: content.js  transcript-core.js
extension-standalone/: background.js  config.js  content.js  manifest.json  popup.css  popup.html  popup.js  transcript-core.js  translator.js
macos-app/: Package.swift
macos-app/SubtitleTranslatorApp/: App.swift  Info.plist
scripts/: api_probe.py
shared/docs/: README_zh.md
shared/scripts/: build-macos-app.sh  dev.sh
skills/subtitle-translator/: SKILL.md
skills/subtitle-translator/agents/: openai.yaml
src/subtitle_translator/: cli.py  config_manager.py  console_views.py  context_loader.py  env_setup.py  exceptions.py  file_discovery.py  logger.py  processor.py  service.py  version_utils.py
subtitle-translator/references/: terminology-and-context.md
subtitle-translator/scripts/: discover_subtitle_translator.sh  run_translate.sh
tests/: test_ass_converter.py  test_cli.py  test_config.py  test_context_extractor.py  test_context_loader.py  test_data_timestamps.py  test_external_glossary.py  test_file_discovery.py  test_llm_client.py  test_optimizer.py  test_response_parser.py  test_terminology.py  test_translation_retry.py
youtube-subtitle/: .gitignore
(+60 files in other folders)
