[project]
name = "subtitle-translator"
version = "0.5.6"
description = "A unified tool for speech transcription and subtitle translation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "retry",
    "python-dotenv",
    "requests",
    "dacite>=1.9.2",
    "huggingface-hub>=0.30.2",
    "numpy>=2.2.5",
    "typer>=0.15.3",
    "httpx[socks]",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
translate = "subtitle_translator.cli:cli_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
